# nuzlocke-generator-engine

./: .gitignore  Cargo.toml  README.md  pokedex.json
bundles/default/: gen6.bundle.json  gen7.bundle.json  gen8.bundle.json  gen9.bundle.json  transpose_sets.py
scripts/: .gitignore  emerald_trainer_order.py  trainer_order.toml
src/: bundles.rs  cli.rs  database.rs  doc.rs  main.rs  options.rs
src/bundles/: mod.rs
src/database/: mod.rs
src/encounters/: emerald_expansion.rs  mod.rs
src/engine/: mod.rs  trainer_order.rs
src/parties/: emerald_expansion.rs  error.rs  mod.rs
templates/: styles.css  trainer.jinja  trainers.jinja
