[package]
name = "nuzlocke-generator-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
getopts = "0.2.21"
rand = { version = "0.9.1", features = ["small_rng"] }
regex = "1.10.3"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
