[package]
name = "nuzlocke-generator-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
rand = { version = "0.9.1", features = ["small_rng"] }
regex = "1.10.3"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unidecode = "0.3.0"
