[package]
name = "nuzlocke-generator-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.16.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
image = "0.25.10"
rand = { version = "0.10.1", features = ["sys_rng"] }
regex = "1.10.3"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = { version = "1.0.140" }
thiserror = "2.0.12"
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unidecode = "0.3.0"
